# odometer

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cmd/: measure.rs  mod.rs  version.rs
crates/profiler/: Cargo.toml
crates/profiler/src/: core.rs  lib.rs
docs/: architecture.md  benchmarks.md  design-philosophy.md  extending-odometer.md
