[package]
name = "odometer"
# Inherit common metadata from the workspace
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "odometer"
path = "src/main.rs"

[dependencies]
# Use dependencies from the workspace
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { version = "1.0", features = ["full"] }
profiler = { path = "../profiler" }